objects/HS_Survey__c.object
<CustomObject>
    <description>HeadStart London – Surveys</description>
    <fields>
        <fullName>Able_to_get_a_job__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Able  to get a job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not Confident at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Able_to_make_a_difference__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Able to make a difference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_form_knowledge__c</fullName>
        <inlineHelpText>Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Application form knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>As_a_result_of_today_I_have_found_out_a__c</fullName>
        <inlineHelpText>As a result of today, I have found out about a new job I would like to learn more about</inlineHelpText>
        <label>As a result of today, I have found a Job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Before_signing_up_for_the_session_today__c</fullName>
        <inlineHelpText>Before signing up for the session today, I had never heard of Bloomberg</inlineHelpText>
        <label>I had never heard of Bloomberg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Before_today__c</fullName>
        <inlineHelpText>Before today, I didn&apos;t realise how many types of jobs there are at Bloomberg</inlineHelpText>
        <label>I didn&apos;t realise how many types of jobs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Believe_volunteering_is_important__c</fullName>
        <inlineHelpText>I believe volunteering is important</inlineHelpText>
        <label>Believe volunteering is important</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Better_prepared_to_volunteer__c</fullName>
        <inlineHelpText>I am better prepared to volunteer</inlineHelpText>
        <label>Better prepared to volunteer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Better_understanding_what_employers_want__c</fullName>
        <label>Better understanding what employers want</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neither agree nor disagree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CV_Knowledge__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>CV Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_achieve_a_lot__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Can achieve a lot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communicating_clearly__c</fullName>
        <inlineHelpText>How good would you say you are at the following? Please rate from 1 to 10 where 10: Excellent and 1: very poor</inlineHelpText>
        <label>Communicating clearly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_responsibility__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Community responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connection_to_those_diff_in_community__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Connection to those diff in community</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Survey_completed__c</fullName>
        <label>Date Survey completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_workshop_in_two_words__c</fullName>
        <inlineHelpText>How would you describe today’s workshop in two words?</inlineHelpText>
        <label>Describe workshop in two words</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_previous_Charity__c</fullName>
        <inlineHelpText>If yes, are you hoping to use this existing volunteering placement to complete your 16
hours for HeadStart? If yes, let us know the name and contact details for the charity.</inlineHelpText>
        <label>Details of previous Charity</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Develop_skills__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with HeadStart helped you to develop skills?</inlineHelpText>
        <label>Develop skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Develop_skills_for__c</fullName>
        <inlineHelpText>develop skills and techniques for delivering good quality customer service</inlineHelpText>
        <label>Develop skills for deliver good CS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Develop_ways_of_communicating_genuinely__c</fullName>
        <inlineHelpText>How much, if at all, do you feel today&apos;s workshop has helped you to develop ways of communicating genuinely clearly and confidently</inlineHelpText>
        <label>Develop ways of communicating genuinely</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Develop_ways_to_demonstrate_CS__c</fullName>
        <inlineHelpText>Develop ways to demonstrate your customer service skills in an interview</inlineHelpText>
        <label>Develop ways to demonstrate CS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Develop_ways_to_increase_the_impact_of__c</fullName>
        <inlineHelpText>How much, if at all, do you feel today&apos;s workshop has helped you to develop ways to increase the impact of what you are saying through personal stories</inlineHelpText>
        <label>Impact of personal stories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Develop_your_story_telling_skills_to__c</fullName>
        <inlineHelpText>How much, if at all, do you feel today&apos;s workshop has helped you to develop your story telling skills to help your prove you have the skills for the job</inlineHelpText>
        <label>Develop story telling skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_experience_on_HeadStart_help_you_get__c</fullName>
        <inlineHelpText>If you are currently working, but did not secure your job through your HeadStart interview, do you think your experience on HeadStart directly helped you to secure this job?</inlineHelpText>
        <label>Did experience on HeadStart help you get</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Any_HeadStart_Improvements__c</fullName>
        <inlineHelpText>Are there any parts of the HeadStart Programme you feel could be improved or any other skills you would like to develop further, please tell us about these below</inlineHelpText>
        <label>FS: Any HeadStart Improvements</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_Continue_volunteering__c</fullName>
        <inlineHelpText>As a result of taking part in the HeadStart Programme, how likely or unlikely are you to…</inlineHelpText>
        <label>FS: Continue volunteering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Quite likely</fullName>
                </value>
                <value>
                    <fullName>Neither likely or unlikely</fullName>
                </value>
                <value>
                    <fullName>Quite unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Develop_teamwork_skills__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstard helped you to…</inlineHelpText>
        <label>FS: Develop teamwork skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Get_interview_practice__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with HeadStart helped you to get some interview practice?</inlineHelpText>
        <label>FS: Get interview practice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_HeadStart_has_helped_me_to__c</fullName>
        <inlineHelpText>What would you say is the most important thing that taking part in HeadStart has helped you to do?</inlineHelpText>
        <label>FS: HeadStart has helped me to:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_HeadStart_has_met_my_expectations__c</fullName>
        <inlineHelpText>Thinking about the HeadStart programme overall and the activities you have done, to what extent do you feel the programme met your expectations</inlineHelpText>
        <label>FS: HeadStart has met my expectations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Better than I expected</fullName>
                </value>
                <value>
                    <fullName>Same as I expected</fullName>
                </value>
                <value>
                    <fullName>Not as good as I expected</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Improve_comm_skills__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstart helped you to…</inlineHelpText>
        <label>FS: Improve comm skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Prepare_for_future_interviews__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstard helped you to…</inlineHelpText>
        <label>FS: Prepare for future interviews</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Prepare_for_workplace__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstard helped you to…</inlineHelpText>
        <label>FS: Prepare for workplace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Put_something_in_CV__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with HeadStart helped you to have something to put in your CV?</inlineHelpText>
        <label>FS: Put something in CV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Recommend_volunteering__c</fullName>
        <inlineHelpText>As a result of taking part in the HeadStart Programme, how likely or unlikely are you to…</inlineHelpText>
        <label>FS: Recommend volunteering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Quite likely</fullName>
                </value>
                <value>
                    <fullName>Neither likely or unlikely</fullName>
                </value>
                <value>
                    <fullName>Quite unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Recommend_volunteering_to_develop_sk__c</fullName>
        <inlineHelpText>As a result of taking part in the HeadStart Programme, how likely or unlikely are you to… (FS: Recommend volunteering to develop skills)</inlineHelpText>
        <label>FS: Recommend volunteering to develop sk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Quite likely</fullName>
                </value>
                <value>
                    <fullName>Neither likely or unlikely</fullName>
                </value>
                <value>
                    <fullName>Quite unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Strengthen_CV__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstard helped you to…</inlineHelpText>
        <label>FS: Strengthen CV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Strengthen_UCAS_Application__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstard helped you to…</inlineHelpText>
        <label>FS: Strengthen UCAS Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Tell_future_Empl_about_HS__c</fullName>
        <inlineHelpText>As a result of taking part in the HeadStart Programme, how likely or unlikely are you to…</inlineHelpText>
        <label>FS: Tell future Empl about HS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Quite likely</fullName>
                </value>
                <value>
                    <fullName>Neither likely or unlikely</fullName>
                </value>
                <value>
                    <fullName>Quite unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_feel_more_connected_with_community__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstart helped you to…</inlineHelpText>
        <label>FS: feel more connected with community</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_trust_and_understand_p_diff_to_you__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with Headstart helped you to…</inlineHelpText>
        <label>FS: trust and understand p diff to you</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>